# RED3ext

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  clang-format.yml  commit-lint.yml  cpp-build.yml  cpp-format.yml  release.yml
cmake/: ConfigureDefaultOutputDirectories.cmake  ConfigureResourceRc.cmake  ConfigureVersionFromGit.cmake
cmake/templates/: Resource.rc.in
src/dll/: CMakeLists.txt
src/loader/: AppMetadata.cpp  AppMetadata.hpp  CMakeLists.txt  Main.cpp  stdafx.hpp
